# template-hexagonal-python

./: CHANGELOG.md  CONTRIBUTING.md  README.md  init_project.sh  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
