[tool.poetry]
name = "template-arquitectura-hexagonal"
version = "0.1.2"
description = "Template base para microservicios con Arquitectura Hexagonal y Python"
authors = ["Gustavo Montupin Villanueva <gmontupin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.4.0"
pre-commit = "^3.6.0"
